<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".Temperatura">

    <TextView
            android:id="@+id/cabecalhoTemp"
            android:text="@string/convTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="256dp"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorTexto"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="76dp"/>

    <EditText
            android:id="@+id/celsiusEntrada"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorTexto"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:hint="@string/celsius"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/textoCelsius"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="16dp"/>
    <EditText
            android:id="@+id/fareheintEntrada"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorTexto"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:hint="@string/fareheint"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoFareheint"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginTop="16dp"/>
    <TextView
            android:id="@+id/fareheintSaida"
            android:text="@string/valorInicialTempF"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorTexto"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textoConvCF"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="16dp"/>
    <TextView
            android:id="@+id/celsiusSaida"
            android:text="@string/valorInicialTempC"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorTexto"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/textoConvFC"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginTop="16dp"/>
    <Button
            android:id="@+id/celsiusToFareheint"
            android:text="@string/calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/fareheintSaida"
            android:layout_marginTop="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <Button
            android:id="@+id/fareheintToCelsius"
            android:text="@string/calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/celsiusSaida"
            android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"/>
    <Button
            android:id="@+id/clearTemp"
            android:text="@string/limpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/fareheintToCelsius" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>
    <TextView
            android:id="@+id/textoCelsius"
            android:text="@string/textoCelsius"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorTexto"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@+id/cabecalhoTemp"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <TextView
            android:id="@+id/textoFareheint"
            android:text="@string/textoFareheint"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorTexto"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@+id/cabecalhoTemp"
            android:layout_marginTop="16dp" android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:id="@+id/textoConvCF"
            android:text="@string/textoConvCF"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorTexto"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@+id/celsiusEntrada"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"/>
    <TextView
            android:id="@+id/textoConvFC"
            android:text="@string/textoConvFC"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorTexto"
            android:textStyle="bold"

            app:layout_constraintTop_toBottomOf="@+id/fareheintEntrada"
            android:layout_marginTop="24dp" android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>