<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/luacheia"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/saudacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/colorTexto"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="76dp"/>
    <Button
            android:text="@string/temperatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/temperatura"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="8dp"
            android:gravity="center"
            android:textColor="@color/colorTexto"
            android:background="@color/colorBotao"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="132dp"/>
    <Button
            android:text="@string/moeda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/moeda"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="8dp"
            android:gravity="center"
            android:textColor="@color/colorTexto"
            android:background="@color/colorBotao"
            android:layout_marginBottom="132dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp" android:layout_marginRight="36dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>